--- a/doc/README
+++ b/doc/README
@@ -1,3 +1,3 @@
 # For license: see LICENSE file at top-level
 
-Reworking of OpenSHMEM reference implementation using UCX
+Hints and requirements for compilation, running, and 3rd party software.
