Shout-out to Open-MPI in README

--- a/README
+++ b/README
@@ -6,6 +6,7 @@ Links:
 OpenSHMEM : http://www.openshmem.org/
 OpenUCX   : http://www.openucx.org/
 PMIx      : https://pmix.github.io/pmix/
+Open-MPI  : http://www.open-mpi.org/
 
 ========================================================================
 
