--- a/README
+++ b/README
@@ -14,6 +14,11 @@ Copyright (c) 2016 - 2017
   Stony Brook University
 Copyright (c) 2015 - 2017
   Los Alamos National Security, LLC.
+Copyright (c) 2017 - 2018
+  Rice University.  Neither the name of Rice University nor the names
+  of its contributors may be used to endorse or promote products
+  derived from this software without specific prior written
+  permission.
 Copyright (c) 2011 - 2016
   University of Houston System and UT-Battelle, LLC.
 Copyright (c) 2009 - 2016
