Add Bert's name to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,5 @@
 
 Tony Curtis <anthony.curtis@stonybrook.edu>
 
-Srdan Milakovic <sm108@rice.edu>
+Collectives         Srdan Milakovic <sm108@rice.edu>
+PSHMEM updates      Bert Wesarg <bert.wesarg@tu-dresden.de>
