Add wenbin as author, reformat

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,8 @@
 # For license: see LICENSE file at top-level
 
-Tony Curtis <anthony.curtis@stonybrook.edu>
+Tony Curtis                           <anthony.curtis@stonybrook.edu>
 
-Collectives         Srdan Milakovic <sm108@rice.edu>
-PSHMEM updates      Bert Wesarg <bert.wesarg@tu-dresden.de>
+Wenbin Lu                             <wenbin.lu@stonybrook.edu>
+
+Collectives     Srdan Milakovic       <sm108@rice.edu>
+PSHMEM updates  Bert Wesarg           <bert.wesarg@tu-dresden.de>
